@@ -57,6 +57,7 @@ public:
 
 	luxrays::Spectrum color;
 	float power, efficency;
+	bool emittedPowerNormalize;
 
 	luxrays::Point localPos, localTarget;
 	float radius;
