@@ -77,6 +77,8 @@ public:
 	luxrays::Spectrum GetEmittedGain() const { return emittedGain; }
 	void SetEmittedPower(const float v) { emittedPower = v; UpdateEmittedFactor(); }
 	float GetEmittedPower() const { return emittedPower; }
+	void SetEmittedPowerNormalize(const bool v) { emittedPowerNormalize = v; }
+	bool IsEmittedPowerNormalize() { return emittedPowerNormalize; }
 	void SetEmittedEfficency(const float v) { emittedEfficency = v; UpdateEmittedFactor(); }
 	float GetEmittedEfficency() const { return emittedEfficency; }
 	const luxrays::Spectrum &GetEmittedFactor() const { return emittedFactor; }
@@ -223,6 +225,7 @@ protected:
 	float emittedImportance;
 	luxrays::Spectrum emittedGain, emittedFactor;
 	float emittedPower, emittedEfficency, emittedTheta, emittedCosThetaMax;
+	bool emittedPowerNormalize;
 
 	const Texture *frontTransparencyTex;
 	const Texture *backTransparencyTex;
