@@ -72,6 +72,10 @@ scene.materials.DarkGreen.kd = 0. 0.4 0.
 ##
 scene.materials.Light.type = matte
 scene.materials.Light.emission = 30. 30. 30.
+#scene.materials.Light.emission = 10 5 5
+#scene.materials.Light.emission.power = 1
+#scene.materials.Light.emission.normalizebycolor = 0
+#scene.materials.Light.emission.efficency = 17
 #scene.materials.Light.emission.directlightsampling.type = DISABLED
 #scene.materials.Light.emission.theta = 20.0
 scene.materials.Light.kd = 0.75 0.75 0.75
