@@ -28,7 +28,7 @@ using namespace slg;
 //------------------------------------------------------------------------------
 
 LaserLight::LaserLight() :
-	color(1.f), power(0.f), efficency(0.f),
+	color(1.f), power(0.f), efficency(0.f), emittedPowerNormalize(true),
 	localPos(), localTarget(0.f, 0.f, 1.f),
 	radius(.01f) {
 }
@@ -37,7 +37,9 @@ LaserLight::~LaserLight() {
 }
 
 void LaserLight::Preprocess() {
-	emittedFactor = gain * color * (power * efficency / (M_PI * radius * radius * color.Y()));
+	const float normalizeFactor = emittedPowerNormalize ? (1.f / Max(color.Y(), 0.f)) : 1.f;
+
+	emittedFactor = gain * color * (power * efficency * normalizeFactor / (M_PI * radius * radius));
 	if (emittedFactor.Black() || emittedFactor.IsInf() || emittedFactor.IsNaN())
 		emittedFactor = gain * color;
 
@@ -182,6 +184,7 @@ Properties LaserLight::ToProperties(const ImageMapCache &imgMapCache, const bool
 	props.Set(Property(prefix + ".type")("laser"));
 	props.Set(Property(prefix + ".color")(color));
 	props.Set(Property(prefix + ".power")(power));
+	props.Set(Property(prefix + ".normalizebycolor")(emittedPowerNormalize));
 	props.Set(Property(prefix + ".efficency")(efficency));
 	props.Set(Property(prefix + ".position")(localPos));
 	props.Set(Property(prefix + ".target")(localTarget));
