@@ -30,14 +30,18 @@ using namespace slg;
 // PointLight
 //------------------------------------------------------------------------------
 
-PointLight::PointLight() : localPos(0.f), color(1.f), power(0.f), efficency(0.f) {
+PointLight::PointLight() : localPos(0.f), color(1.f),
+		power(0.f), efficency(0.f),
+		emittedPowerNormalize(true) {
 }
 
 PointLight::~PointLight() {
 }
 
 void PointLight::Preprocess() {
-	emittedFactor = gain * color * (power * efficency / color.Y());
+	const float normalizeFactor = emittedPowerNormalize ? (1.f / Max(color.Y(), 0.f)) : 1.f;
+
+	emittedFactor = gain * color * (power * efficency * normalizeFactor);
 
 	if (emittedFactor.Black() || emittedFactor.IsInf() || emittedFactor.IsNaN())
 		emittedFactor = gain * color;
@@ -120,6 +124,7 @@ Properties PointLight::ToProperties(const ImageMapCache &imgMapCache, const bool
 	props.Set(Property(prefix + ".type")("point"));
 	props.Set(Property(prefix + ".color")(color));
 	props.Set(Property(prefix + ".power")(power));
+	props.Set(Property(prefix + ".normalizebycolor")(emittedPowerNormalize));
 	props.Set(Property(prefix + ".efficency")(efficency));
 	props.Set(Property(prefix + ".position")(localPos));
 
