@@ -28,7 +28,7 @@ using namespace slg;
 //------------------------------------------------------------------------------
 
 SpotLight::SpotLight() :
-	color(1.f), power(0.f), efficency(0.f),
+	color(1.f), power(0.f), efficency(0.f), emittedPowerNormalize(true),
 	localPos(Point()), localTarget(Point(0.f, 0.f, 1.f)),
 	coneAngle(30.f), coneDeltaAngle(5.f) {
 }
@@ -40,8 +40,10 @@ void SpotLight::Preprocess() {
 	cosTotalWidth = cosf(Radians(coneAngle));
 	cosFalloffStart = cosf(Radians(coneAngle - coneDeltaAngle));
 
-	emittedFactor = gain * color * (power * efficency /
-			(2.f * M_PI * color.Y() * (1.f - .5f * (cosFalloffStart + cosTotalWidth))));
+	const float normalizeFactor = emittedPowerNormalize ? (1.f / Max(color.Y(), 0.f)) : 1.f;
+
+	emittedFactor = gain * color * (power * efficency * normalizeFactor /
+			(2.f * M_PI * (1.f - .5f * (cosFalloffStart + cosTotalWidth))));
 	if (emittedFactor.Black() || emittedFactor.IsInf() || emittedFactor.IsNaN())
 		emittedFactor = gain * color;
 
@@ -166,6 +168,7 @@ Properties SpotLight::ToProperties(const ImageMapCache &imgMapCache, const bool 
 	props.Set(Property(prefix + ".type")("spot"));
 	props.Set(Property(prefix + ".color")(color));
 	props.Set(Property(prefix + ".power")(power));
+	props.Set(Property(prefix + ".normalizebycolor")(emittedPowerNormalize));
 	props.Set(Property(prefix + ".efficency")(efficency));
 	props.Set(Property(prefix + ".position")(localPos));
 	props.Set(Property(prefix + ".target")(localTarget));
