@@ -43,6 +43,7 @@
 * Added the support for UV-less bump mapping with triplanar mapping
 * Changing the number of light groups used doesn't require OpenCL compilation anymore (removed PARAM_FILM_RADIANCE_GROUP_*)
 * Reduced (again) the default number of OpenCL threads from 256k to 128k
+* Added the support for .normalizebycolor emission property
 
 ### Fixed Bugs
 
